--- a/inventory/static/styles.css
+++ b/inventory/static/styles.css
@@ -76,4 +76,16 @@ input {
     background-color:#45a049;
   }
 
- 
+  .overview-container {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+
+.overview-item {
+    text-align: center;
+    border: 1px solid #ddd;
+    padding: 10px;
+    border-radius: 5px;
+    width: 200px;
+}
