--- a/inventory/templates/base.html
+++ b/inventory/templates/base.html
@@ -17,7 +17,7 @@
     <a href="{% url 'home' %}">Home</a>
     <a href="{% url 'login' %}">Login</a>
     <a href="{% url 'logout' %}">Logout</a>
-    <a href="{% url 'input_data' %}">Input Data</a>
+    <a href="{% url 'manage_inventory' %}">Input Data</a>
     <a href="{% url 'retrieve_data' %}">Retrieve Data</a>
     <a href="{% url 'add_category' %}">Add Category</a>
     <a href="{% url 'add_supplier' %}">Add Supplier</a>
