--- a/inventory/templates/inventory/add_supplier.html
+++ b/inventory/templates/inventory/add_supplier.html
@@ -1,10 +1,19 @@
 {% extends 'base.html' %}
 
+{% extends 'base.html' %}
+
+{% block title %}Add Supplier{% endblock %}
+
 {% block content %}
-  <h2>Add Supplier</h2>
-  <form method="post" action="{% url 'add_supplier' %}">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Add Supplier</button>
-  </form>
+    <h2>Add Supplier</h2>
+    <form method="post">
+        {% csrf_token %}
+        <div class="form-group">
+            <label for="{{ form.name.id_for_label }}">Name:</label>
+            {{ form.name }}
+        </div>
+           
+        
+        <button type="submit">Add Supplier</button>
+    </form>
 {% endblock %}
